--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
+data/Music_Dataset.csv filter=lfs diff=lfs merge=lfs -text
+assets/Music-banner-vector.jpg filter=lfs diff=lfs merge=lfs -text
 *.env filter=lfs diff=lfs merge=lfs -text
 *.yml filter=lfs diff=lfs merge=lfs -text
 /Docker/kafka/Dockerfile filter=lfs diff=lfs merge=lfs -text
