--- a/.gitattributes
+++ b/.gitattributes
@@ -1,14 +1,14 @@
-data/Music_Dataset.csv filter=lfs diff=lfs merge=lfs -text
-assets/Music-banner-vector.jpg filter=lfs diff=lfs merge=lfs -text
-*.env filter=lfs diff=lfs merge=lfs -text
-*.yml filter=lfs diff=lfs merge=lfs -text
-/Docker/kafka/Dockerfile filter=lfs diff=lfs merge=lfs -text
-/Docker/spark/Dockerfile filter=lfs diff=lfs merge=lfs -text
-/Docker/streamlit/Dockerfile filter=lfs diff=lfs merge=lfs -text
-*.md filter=lfs diff=lfs merge=lfs -text
-*.mp3 filter=lfs diff=lfs merge=lfs -text
-*.csv filter=lfs diff=lfs merge=lfs -text
-*.py filter=lfs diff=lfs merge=lfs -text
-*.txt filter=lfs diff=lfs merge=lfs -text
-*.pyc filter=lfs diff=lfs merge=lfs -text
-*.jpg filter=lfs diff=lfs merge=lfs -text
+#data/Music_Dataset.csv filter=lfs diff=lfs merge=lfs -text
+#assets/Music-banner-vector.jpg filter=lfs diff=lfs merge=lfs -text
+#*.env filter=lfs diff=lfs merge=lfs -text
+#*.yml filter=lfs diff=lfs merge=lfs -text
+#/Docker/kafka/Dockerfile filter=lfs diff=lfs merge=lfs -text
+#/Docker/spark/Dockerfile filter=lfs diff=lfs merge=lfs -text
+#/Docker/streamlit/Dockerfile filter=lfs diff=lfs merge=lfs -text
+#*.md filter=lfs diff=lfs merge=lfs -text
+#*.mp3 filter=lfs diff=lfs merge=lfs -text
+#*.csv filter=lfs diff=lfs merge=lfs -text
+#*.py filter=lfs diff=lfs merge=lfs -text
+#*.txt filter=lfs diff=lfs merge=lfs -text
+#*.pyc filter=lfs diff=lfs merge=lfs -text
+#*.jpg filter=lfs diff=lfs merge=lfs -text
