--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,3 +1,2 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:ae4863bdae026314d5994730ad24730434f256c274d8431c53ed537393992be6
-size 6
+streamlit
+pandas
